# libdrm-rockchip

./: Makefile.am  Makefile.sources  configure.ac  xf86drmMode.c
debian/: changelog  control  libdrm-rockchip1.install  rules
debian/source/: local-options
include/drm/: drm_fourcc.h
libkms/: Android.mk
rockchip/: rga_reg.h  rockchip_drm.c  rockchip_drm.h  rockchip_rga.c
tests/: Makefile.am
tests/modetest/: modetest.c
tests/rockchip/: Makefile.am  rockchip_rga_test.c
